projects/vb6parse/snapshots/tests/library/arrays/split/split_class_usage.snap
---
source: projects/vb6parse/tests/library/arrays/split.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: CallStatement
      children:
        - kind: ClassKeyword
          text: Class
        - kind: Whitespace
          text: " "
        - kind: ArgumentList
          children:
            - kind: Argument
              children:
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: Parser
        - kind: Newline
          text: "\n"
    - kind: Whitespace
      text: "    "
    - kind: FunctionStatement
      children:
        - kind: PublicKeyword
          text: Public
        - kind: Whitespace
          text: " "
        - kind: FunctionKeyword
          text: Function
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: GetFields
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: Identifier
              text: line
            - kind: Whitespace
              text: " "
            - kind: AsKeyword
              text: As
            - kind: Whitespace
              text: " "
            - kind: StringKeyword
              text: String
            - kind: RightParenthesis
              text: )
        - kind: Whitespace
          text: " "
        - kind: AsKeyword
          text: As
        - kind: Whitespace
          text: " "
        - kind: StringKeyword
          text: String
        - kind: LeftParenthesis
          text: (
        - kind: RightParenthesis
          text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: Whitespace
              text: "        "
            - kind: AssignmentStatement
              children:
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: GetFields
                - kind: Whitespace
                  text: " "
                - kind: EqualityOperator
                  text: "="
                - kind: Whitespace
                  text: " "
                - kind: CallExpression
                  children:
                    - kind: Identifier
                      text: Split
                    - kind: LeftParenthesis
                      text: (
                    - kind: ArgumentList
                      children:
                        - kind: Argument
                          children:
                            - kind: IdentifierExpression
                              children:
                                - kind: LineKeyword
                                  text: line
                        - kind: Comma
                          text: ","
                        - kind: Whitespace
                          text: " "
                        - kind: Argument
                          children:
                            - kind: IdentifierExpression
                              children:
                                - kind: Identifier
                                  text: vbTab
                    - kind: RightParenthesis
                      text: )
                - kind: Newline
                  text: "\n"
            - kind: Whitespace
              text: "    "
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: FunctionKeyword
          text: Function
        - kind: Newline
          text: "\n"
    - kind: EndStatement
      children:
        - kind: EndKeyword
          text: End
    - kind: Whitespace
      text: " "
    - kind: CallStatement
      children:
        - kind: ClassKeyword
          text: Class
        - kind: Newline
          text: "\n"
